--- a/TaburetkaProject/App.xaml
+++ b/TaburetkaProject/App.xaml
@@ -4,6 +4,33 @@
              xmlns:local="clr-namespace:TaburetkaProject"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+
+        <Style x:Key="button" TargetType="Button">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="#bababa" />
+            <Setter Property="FontSize" Value="22"/>
+            <Setter Property="Margin" Value="12 0"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border BorderThickness="0">
+                            <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Foreground" Value="Black"/>
+                </Trigger>
+                <Trigger Property="IsMouseCaptured" Value="true">
+                    <Setter Property="Foreground" Value="Black"/>
+                </Trigger>
+
+            </Style.Triggers>
+        </Style>
+
         <Style x:Key="txtHint" TargetType="TextBlock">
             <Setter Property="Foreground" Value="#F5F5F5"/>
             <Setter Property="FontSize" Value="14"/>
