--- a/TaburetkaProject/WindowAddClient.xaml
+++ b/TaburetkaProject/WindowAddClient.xaml
@@ -5,27 +5,41 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TaburetkaProject"
         mc:Ignorable="d"
-        Title="WindowAddClient" Height="450" Width="800">
+        Title="Добавление клиента" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
-        <RowDefinition/>
-        <RowDefinition/>
-        <RowDefinition/>
-        <RowDefinition/>
-        <RowDefinition/>
-        <RowDefinition/>
-        <RowDefinition/>
-            
-        </Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
 
-        <Label Grid.Row ="0" Content="AddClient" Margin="5"/>
-        <TextBox Grid.Row="1" x:Name="Name" Margin="5" >zdes nujen tekst</TextBox>
-        <TextBox Grid.Row="2" Name="Phones" Margin="5"/>
-        <TextBox Grid.Row="3" Name="Adresses" Margin="5"/>
-        <TextBox Grid.Row="4" Name="comment" Margin="5"/>
-        <Label Grid.Row ="5" Content="* - обязательно к заполнению" Margin="5"/>
-        <Button Grid.Row="6" Content="OK" Margin="5" Click="Button_Click"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Label Grid.Row ="0" Grid.Column="0" Content="Имя клиента" Margin="5"/>
+        <Label Grid.Row ="1" Grid.Column="0" Content="Телефоны клиента" Margin="5"/>
+        <Label Grid.Row ="2" Grid.Column="0" Content="Адреса клиента" Margin="5"/>
+        <Label Grid.Row ="3" Grid.Column="0" Content="Тип клиента*" Margin="5"/>
+        <Label Grid.Row ="4" Grid.Column="0" Content="Название компании" Margin="5"/>
+        <Label Grid.Row ="5" Grid.Column="0" Content="Комментарий" Margin="5"/>
+        <Label Grid.Row ="6" Grid.Column="0" Content="* - обязательно к заполнению" Margin="5"/>
+
+        <TextBox Grid.Row="0" Grid.Column="1" x:Name="Name" Margin="5" ></TextBox>
+        <TextBox Grid.Row="1" Grid.Column="1" x:Name="Phones" Margin="5"/>
+        <TextBox Grid.Row="2" Grid.Column="1" x:Name="Adresses" Margin="5"/>
+        <ComboBox x:Name="ClientType" Grid.Row="3" Grid.Column="1" Margin="5" SelectionChanged="companyType_SelectionChanged">
+            <TextBlock>Компания</TextBlock>
+            <TextBlock>Физическое лицо</TextBlock>
+        </ComboBox>
+        <TextBox Grid.Row="4" Grid.Column="1" x:Name="CompanyName" Margin="5"/>
+        <TextBox Grid.Row="5" Grid.Column="1" x:Name="Comment" Margin="5"/>
+        <Button Grid.Row="6" Grid.Column="1" Content="OK" Margin="5" Click="Button_Click"/>
         
-    
     </Grid>
 </Window>
