--- a/TaburetkaProject/Notes.xaml
+++ b/TaburetkaProject/Notes.xaml
@@ -14,26 +14,41 @@
 
             <TextBlock Margin="44,14,0,386" HorizontalAlignment="Left" TextWrapping="Wrap" FontSize="30" FontWeight="Bold" Foreground="#F5F5F5" Width="123">Заметки</TextBlock>
 
-            <StackPanel Margin="0,0,0,267" Orientation="Horizontal">
+            <StackPanel Margin="0,0,0,250" Orientation="Horizontal">
                 <!--Titles-->
-                <Border Background="#66A5AD" CornerRadius="12" Width="715" Padding="17 15 5 15" Height="50" Margin="42,0,42,0">
+                <Border Background="#66A5AD" CornerRadius="12" Width="715" Padding="17 15 5 15" Height="55" Margin="42,0,42,0">
                     <Grid>
                         <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="179*"/>
-                            <ColumnDefinition Width="117*"/>
                         </Grid.ColumnDefinitions>
 
-                        <Image Source="Images/pencil.png" Margin="0" Width="15"/>
-                        <Image Source="Images/add.png" Margin="231,0,12,0" Width="25" RenderTransformOrigin="21.133,0.642" Grid.Column="2"/>
-                        <Image Source="Images/clip.png" Margin="192,0,51,0" Width="25" RenderTransformOrigin="19.578,0.508" Grid.Column="2"/>
-                        <TextBlock Text="Добавить заметку" x:Name="lblNote" Style="{StaticResource ResourceKey=txtHint}" MouseDown="lblNote_MouseDown" Grid.Column="1" Grid.ColumnSpan="2" Margin="10,0,94,0"/>
-                        <TextBox x:Name="txtNote" Style="{StaticResource ResourceKey=textBox}" TextChanged="txtNote_TextChanged"/>
+                        <StackPanel>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="179*"/>
+                                    <ColumnDefinition Width="117*"/>
+                                </Grid.ColumnDefinitions>
 
+                                <fa:ImageAwesome Icon="Pencil" Margin="0" Width="25"/>
+                                <TextBlock Text="Добавить заметку" x:Name="lblNote" Style="{StaticResource ResourceKey=txtHint}" MouseDown="lblNote_MouseDown" Grid.Column="1" Grid.ColumnSpan="2" Margin="10,0,94,0"/>
+                                <TextBox x:Name="txtNote" Style="{StaticResource ResourceKey=textBox}" TextChanged="txtNote_TextChanged"/>
 
+                            </Grid>
+                        </StackPanel>
+
+                        <Button Style="{StaticResource button}" Width="35" HorizontalAlignment="Right" Margin="12,0,10,0">
+                            <fa:ImageAwesome Icon="PlusCircle" Width="25"/>
+                        </Button>
+
+                        <Button Style="{StaticResource button}" Width="35" HorizontalAlignment="Right" Margin="0,0,50,0">
+                            <fa:ImageAwesome Icon="Paperclip" Width="25"/>
+                        </Button>
 
 
                     </Grid>
+
                 </Border>
 
 
