--- a/TaburetkaProject/Notes.xaml
+++ b/TaburetkaProject/Notes.xaml
@@ -11,13 +11,18 @@
 
     <Border CornerRadius="8" Background="#003B46">
         <Grid>
+            
+            <Grid.RowDefinitions>
+                <RowDefinition Height="180"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
 
-            <TextBlock Margin="44,14,0,386" HorizontalAlignment="Left" TextWrapping="Wrap" FontSize="30" FontWeight="Bold" Foreground="#F5F5F5" Width="123">Заметки</TextBlock>
+            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="0" Grid.RowSpan="2" TextWrapping="Wrap" FontSize="30" FontWeight="Bold" Foreground="#F5F5F5" Width="123" Margin="45,20,0,0">Заметки</TextBlock>
 
-            <StackPanel Margin="0,0,0,250" Orientation="Horizontal">
+            <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.RowSpan="2" VerticalAlignment="Top" Margin="0,80,0,0">
                 <!--Titles-->
-                <Border Background="#66A5AD" CornerRadius="12" Width="715" Padding="17 15 5 15" Height="55" Margin="42,0,42,0">
-                    <Grid>
+                <Border Background="#66A5AD" CornerRadius="12" Width="715" Padding="17 15 5 15" Margin="42,0,42,0">
+                    <Grid Height="36">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="auto"/>
@@ -27,22 +32,22 @@
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="auto"/>
-                                    <ColumnDefinition Width="179*"/>
-                                    <ColumnDefinition Width="117*"/>
+                                    <ColumnDefinition Width="435*"/>
+                                    <ColumnDefinition Width="233*"/>
                                 </Grid.ColumnDefinitions>
 
-                                <fa:ImageAwesome Icon="Pencil" Margin="0" Width="25"/>
-                                <TextBlock Text="Добавить заметку" x:Name="lblNote" Style="{StaticResource ResourceKey=txtHint}" MouseDown="lblNote_MouseDown" Grid.Column="1" Grid.ColumnSpan="2" Margin="10,0,94,0"/>
-                                <TextBox x:Name="txtNote" Style="{StaticResource ResourceKey=textBox}" TextChanged="txtNote_TextChanged"/>
+                                <fa:ImageAwesome Icon="Pencil" Width="25" HorizontalAlignment="Center" VerticalAlignment="Center" Height="25"/>
+                                <TextBlock x:Name="lblNote" Style="{StaticResource ResourceKey=txtHint}" MouseDown="lblNote_MouseDown" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center" Width="550" Text="Добавить заметку" Margin="10,10,0,0"/>
+                                <TextBox x:Name="txtNote" Style="{StaticResource ResourceKey=textBox}" TextChanged="txtNote_TextChanged" Grid.Column="1" Grid.ColumnSpan="2" Width="550" VerticalAlignment="Center" Margin="10,10,0,0"/>
 
                             </Grid>
                         </StackPanel>
 
-                        <Button Style="{StaticResource button}" Width="35" HorizontalAlignment="Right" Margin="12,0,10,0">
+                        <Button Style="{StaticResource button}" Width="35" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="2" Height="35">
                             <fa:ImageAwesome Icon="PlusCircle" Width="25"/>
                         </Button>
 
-                        <Button Style="{StaticResource button}" Width="35" HorizontalAlignment="Right" Margin="0,0,50,0">
+                        <Button Style="{StaticResource button}" Width="35" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="2" Margin="0,0,50,0" Height="35">
                             <fa:ImageAwesome Icon="Paperclip" Width="25"/>
                         </Button>
 
