--- a/TaburetkaProject/ToDo.xaml
+++ b/TaburetkaProject/ToDo.xaml
@@ -12,11 +12,16 @@
     <Border CornerRadius="8" Background="#003B46">
         <Grid>
 
-            <TextBlock Margin="44,14,0,386" HorizontalAlignment="Left" TextWrapping="Wrap" FontSize="30" FontWeight="Bold" Foreground="#F5F5F5" Width="123">To do</TextBlock>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="180"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
 
-            <StackPanel Margin="0,0,0,229" Orientation="Horizontal">
+            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="0" TextWrapping="Wrap" FontSize="30" FontWeight="Bold" Foreground="#F5F5F5" Width="80" Height="35" Margin="45,20,0,0">To do</TextBlock>
+
+            <StackPanel Orientation="Horizontal" Grid.Row="0" VerticalAlignment="Bottom" Height="100">
                 <!--Titles-->
-                <Border Background="#66A5AD" CornerRadius="12" Width="715" Padding="17 15 5 17" Height="96" Margin="42 80 80 42">
+                <Border Background="#66A5AD" CornerRadius="12" Width="715" Padding="17 15 5 17" Height="96" Margin="42,0,42,0">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -55,11 +60,11 @@
 
                         </StackPanel>
 
-                        <Button Style="{StaticResource button}" Width="35" Height="40" HorizontalAlignment="Right" Margin="12,0,10,0">
+                        <Button Style="{StaticResource button}" Width="35" Height="35" HorizontalAlignment="Right" Margin="12,0,10,0">
                             <fa:ImageAwesome Icon="PlusCircle" Width="25"/>
                         </Button>
 
-                        <Button Style="{StaticResource button}" Width="35" Height="40" HorizontalAlignment="Right" Margin="0,0,50,0" Click="Button_Click">
+                        <Button Style="{StaticResource button}" Width="35" Height="35" HorizontalAlignment="Right" Margin="0,0,50,0" Click="Button_Click">
                             <fa:ImageAwesome Icon="Paperclip" Height="25" Width="25"/>
                         </Button>
 
