--- a/TaburetkaProject/ToDo.xaml
+++ b/TaburetkaProject/ToDo.xaml
@@ -17,11 +17,11 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="0" TextWrapping="Wrap" FontSize="30" FontWeight="Bold" Foreground="#F5F5F5" Width="80" Height="35" Margin="45,20,0,0">To do</TextBlock>
+            <TextBlock HorizontalAlignment="Stretch" VerticalAlignment="Top" Grid.Row="0" TextWrapping="Wrap" FontSize="30" FontWeight="Bold" Foreground="#F5F5F5" Width="80" Height="35" Margin="0,20,0,0">To do</TextBlock>
 
-            <StackPanel Orientation="Horizontal" Grid.Row="0" VerticalAlignment="Bottom" Height="100">
+            <StackPanel Orientation="Horizontal" Grid.Row="0" VerticalAlignment="Bottom" Width="600" Height="100" HorizontalAlignment="Stretch">
                 <!--Titles-->
-                <Border Background="#66A5AD" CornerRadius="12" Width="715" Padding="17 15 5 17" Height="96" Margin="42,0,42,0">
+                <Border Background="#66A5AD" CornerRadius="12" MinWidth="600" Padding="17 15 5 17" Height="98" HorizontalAlignment="Stretch">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -39,8 +39,8 @@
                                 </Grid.ColumnDefinitions>
 
                                 <fa:ImageAwesome Icon="Pencil" Margin="0" Width="15"/>
-                                <TextBlock Text="Добавить заметку" x:Name="leblNote" Style="{StaticResource ResourceKey=txtHint}" MouseDown="lblNote_MouseDown" Grid.Column="1" Grid.ColumnSpan="2" Margin="10,0,94,0"/>
-                                <TextBox x:Name="textNote" Style="{StaticResource ResourceKey=textBox}" TextChanged="txtNote_TextChanged"/>
+                                <TextBlock Text="Добавить заметку" x:Name="leblNote" Style="{StaticResource ResourceKey=txtHint}" MouseDown="lblNote_MouseDown" Grid.Column="1" Grid.ColumnSpan="2" Margin="10,0,0,0" HorizontalAlignment="Left" Width="459"/>
+                                <TextBox x:Name="textNote" Style="{StaticResource ResourceKey=textBox}" TextChanged="txtNote_TextChanged" Width="459"/>
                             </Grid>
 
                             <Separator Margin="25 16 90 11" Height="0.8" Background="#F5F5F5"/>
@@ -53,8 +53,8 @@
                                 </Grid.ColumnDefinitions>
 
                                 <fa:ImageAwesome Icon="Bell" Margin="0" Width="15"/>
-                                <TextBlock Text="_ _ : _ _ - _ _ : _ _" x:Name="lblTime" Style="{StaticResource ResourceKey=txtHint}" MouseDown="lblTime_MouseDown" Grid.Column="1" Grid.ColumnSpan="2" Margin="10,0,94,0"/>
-                                <TextBox x:Name="txtTime" Style="{StaticResource ResourceKey=textBox}" TextChanged="txtTime_TextChanged"/>
+                                <TextBlock Text="_ _ : _ _ - _ _ : _ _" x:Name="lblTime" Style="{StaticResource ResourceKey=txtHint}" MouseDown="lblTime_MouseDown" Grid.Column="1" Grid.ColumnSpan="2" Width="459" Margin="10,0,94,0" HorizontalAlignment="Stretch"/>
+                                <TextBox x:Name="txtTime" Style="{StaticResource ResourceKey=textBox}" TextChanged="txtTime_TextChanged" Width="459"/>
 
                             </Grid>
 
