--- a/TaburetkaProject/Dashboard.xaml
+++ b/TaburetkaProject/Dashboard.xaml
@@ -3,13 +3,14 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
       xmlns:local="clr-namespace:TaburetkaProject"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Page1">
 
-    <Grid Background="Yellow">
-        <TextBlock FontSize="35" VerticalAlignment="Center" HorizontalAlignment="Center">Page1</TextBlock>
-        
+    <Grid >
+        <wpf:ChromiumWebBrowser x:Name="Browser" Address="http://127.0.0.1:3000/"/>
+
     </Grid>
 </Page>
