--- a/TaburetkaProject/ToDo.xaml
+++ b/TaburetkaProject/ToDo.xaml
@@ -105,21 +105,21 @@
                             </Grid>
                         </StackPanel>
 
-                        <Button Style="{StaticResource button}" Width="35" Height="35" HorizontalAlignment="Right" Margin="0,0,55,0" Click="Button_Click">
+                        <Button Style="{StaticResource AddNotesbutton}" Width="35" Height="35" HorizontalAlignment="Right" Margin="0,0,55,0" Click="Button_Click">
                             <fa:ImageAwesome Icon="image" Height="25" Width="18"/>
                         </Button>
                         <TextBlock HorizontalAlignment="Right" Margin="0,0,55,-15" >
                             <TextBox Visibility="Hidden" Name="imagePath"/>
                         </TextBlock>
 
-                        <Button Style="{StaticResource button}" Name="FileUpload" Width="35" Height="35" HorizontalAlignment="Right" Margin="0,0,28,0" Click="FileUpload_Click">
+                        <Button Style="{StaticResource AddNotesbutton}" Name="FileUpload" Width="35" Height="35" HorizontalAlignment="Right" Margin="0,0,28,0" Click="FileUpload_Click">
                             <fa:ImageAwesome x:Name="fileUpload" Icon="PaperClip" Height="18" Width="19"/>
                         </Button>
                         <TextBlock HorizontalAlignment="Right" Width="20" Height="20" Margin="0,50,28,0" >
                             <TextBox Visibility="Hidden" Name="fileName"/>
                         </TextBlock>
 
-                        <Button Style="{StaticResource button}" Name="BtnAdd" Width="35" Height="35" HorizontalAlignment="Right" Margin="12,0,0,0" Click="BtnAdd_Click">
+                        <Button Style="{StaticResource AddNotesbutton}" Name="BtnAdd" Width="35" Height="35" HorizontalAlignment="Right" Margin="12,0,0,0" Click="BtnAdd_Click">
                             <fa:ImageAwesome Icon="PlusCircle" Width="18" Height="18"/>
                         </Button>
                     </Grid>
