--- a/DesignTaburetka/Pages/Notes.xaml
+++ b/DesignTaburetka/Pages/Notes.xaml
@@ -3,21 +3,55 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:fa="http://schemas.fontawesome.io/icons/"
       xmlns:local="clr-namespace:TaburetkaProject"
-      xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Notes">
 
+    <Page.Resources>
+        <ContextMenu x:Key="itemMenu">
+            <MenuItem Header="_Edit Item" Name="EditItem" Click="EditItem_Click"/>
+            <MenuItem Header="Open Image" Name="OpenImage" Click="OpenImage_Click"/>
+            <MenuItem Header="_Open File" Name="OpenFile" Click="OpenFile_Click"/>
+            <MenuItem Header="_Delete" Name="DeleteItem" Click="DeleteItem_Click"/>
+        </ContextMenu>
+    </Page.Resources>
     <Border CornerRadius="8" Background="#003B46">
         <Grid>
 
-            <TextBlock Margin="44,14,0,386" HorizontalAlignment="Left" FontSize="30" FontWeight="Bold" Foreground="#F5F5F5" Width="123">Заметки</TextBlock>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="180"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
 
-            <StackPanel Margin="0,0,0,250" Orientation="Horizontal">
+            <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="10" Width="auto" Height="auto" HorizontalAlignment="Center">
+                <Grid>
+                    <ListView Style="{DynamicResource ListViewStyle}" Background="#003B46" Name="lvToDo" Height="auto" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="650" Grid.Row="1" Grid.ColumnSpan="3" 
+                          ContextMenu="{StaticResource itemMenu}">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel>
+                                    <TextBlock Text="Description:" FontWeight="Bold"/>
+                                    <TextBlock Name="Description" Text="{Binding Description}"/>
+                                    <TextBlock Text="Image:" FontWeight="Bold"/>
+                                    <TextBlock Name="Image" Text="{Binding ImageSource}"/>
+                                    <TextBlock Text="File:" FontWeight="Bold"/>
+                                    <TextBlock Name="File" Text="{Binding FileSource}"/>
+                                    <Separator Height="0.8" Background="#66A5AD" HorizontalAlignment="Center" VerticalAlignment="Center" Width="620"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Grid>
+            </StackPanel>
+
+            <TextBlock HorizontalAlignment="Stretch" VerticalAlignment="Top" Grid.Row="0" Grid.RowSpan="2" TextWrapping="Wrap" FontSize="30" FontWeight="Bold" Foreground="#F5F5F5" Width="123" Margin="0,20,0,0">Заметки</TextBlock>
+
+            <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.RowSpan="2" Width="600" VerticalAlignment="Top" Margin="0,80,0,0">
                 <!--Titles-->
-                <Border Background="#66A5AD" CornerRadius="12" Width="715" Padding="17 15 5 15" Height="55" Margin="42,0,42,0">
-                    <Grid>
+                <Border Background="#66A5AD" CornerRadius="12" Width="600" Padding="17 15 5 15">
+                    <Grid Height="36">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="auto"/>
@@ -27,28 +61,38 @@
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="auto"/>
-                                    <ColumnDefinition Width="179*"/>
-                                    <ColumnDefinition Width="117*"/>
+                                    <ColumnDefinition Width="435*"/>
+                                    <ColumnDefinition Width="233*"/>
                                 </Grid.ColumnDefinitions>
 
-                                <fa:IconImage Icon="Pen" Margin="0" Width="25"/>
-                                <TextBlock Text="Добавить заметку" x:Name="lblNote" Style="{StaticResource ResourceKey=txtHint}" MouseDown="lblNote_MouseDown" Grid.Column="1" Grid.ColumnSpan="2" Margin="10,0,94,0"/>
-                                <TextBox x:Name="txtNote" Style="{StaticResource ResourceKey=textBox}" TextChanged="txtNote_TextChanged"/>
+                                <fa:ImageAwesome Icon="Pencil" Width="25" HorizontalAlignment="Center" VerticalAlignment="Center" Height="35"/>
+                                <TextBlock x:Name="lblNote" Style="{StaticResource ResourceKey=txtHint}" MouseDown="lblNote_MouseDown" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Top" Text="Добавить заметку" Margin="10,10,0,0"/>
+                                <TextBox x:Name="txtNote" Style="{StaticResource ResourceKey=textBox}" TextChanged="txtNote_TextChanged" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Top" Margin="10,10,14,0"/>
 
                             </Grid>
                         </StackPanel>
 
-                        <Button Style="{StaticResource button}" Width="40" HorizontalAlignment="Right">
-                            <fa:IconImage Icon="PlusCircle" Width="25"/>
+                        <Button Style="{StaticResource button}" Width="25" Height="35" HorizontalAlignment="Right" Margin="0,0,75,0" Click="Button_Click">
+                            <fa:ImageAwesome Icon="image" Height="25" Width="18"/>
                         </Button>
+                        <TextBlock HorizontalAlignment="Right" Margin="0,0,68,-15" >
+                            <TextBox Visibility="Hidden" Name="imagePath"/>
+                        </TextBlock>
 
-                        <Button Style="{StaticResource button}" Width="40" HorizontalAlignment="Right" Margin="0 0 45 0">
-                            <fa:IconImage Icon="Paperclip" Width="25"/>
+                        <Button Style="{StaticResource button}" Name="FileUpload" Width="25" Height="35" HorizontalAlignment="Right" Margin="0,0,42,0" Click="FileUpload_Click">
+                            <fa:ImageAwesome x:Name="fileUpload" Icon="PaperClip" Height="18" Width="19"/>
+                        </Button>
+                        <TextBlock HorizontalAlignment="Right" Width="20" Height="20" Margin="0,50,28,0" >
+                            <TextBox Visibility="Hidden" Name="fileName"/>
+                        </TextBlock>
+
+                        <Button Style="{StaticResource button}" Name="BtnAdd" Width="25" Height="35" HorizontalAlignment="Right" Margin="0,0,9,0" Click="BtnAdd_Click">
+                            <fa:ImageAwesome Icon="PlusCircle" Width="18" Height="18"/>
                         </Button>
 
 
                     </Grid>
-                    
+
                 </Border>
 
 
